--- a/app/src/main/res/drawable/back.xml
+++ b/app/src/main/res/drawable/back.xml
@@ -1,27 +1,48 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="99.733dp"
-    android:height="63.733dp"
-    android:viewportWidth="99.733"
-    android:viewportHeight="63.733">
+    android:width="100.03dp"
+    android:height="64.03dp"
+    android:viewportWidth="100.03"
+    android:viewportHeight="64.03">
   <path
-      android:pathData="M4.469,0.5L95.264,0.5A3.969,3.969 0,0 1,99.233 4.469L99.233,59.264A3.969,3.969 0,0 1,95.264 63.233L4.469,63.233A3.969,3.969 0,0 1,0.5 59.264L0.5,4.469A3.969,3.969 0,0 1,4.469 0.5z"
-      android:strokeAlpha="0.9"
-      android:strokeWidth="1"
+      android:pathData="M4.62,0.65L95.41,0.65A3.97,3.97 0,0 1,99.38 4.62L99.38,59.41A3.97,3.97 0,0 1,95.41 63.38L4.62,63.38A3.97,3.97 0,0 1,0.65 59.41L0.65,4.62A3.97,3.97 0,0 1,4.62 0.65z"
+      android:strokeAlpha="0.5"
+      android:strokeWidth="1.3"
       android:fillColor="#00000000"
       android:strokeColor="#1a1a1a"
       android:fillAlpha="0.5"/>
   <path
-      android:pathData="M0.366,5.781L99.379,5.781"
-      android:strokeAlpha="0.9"
-      android:strokeWidth="1"
+      android:pathData="M0.52,5.93L99.53,5.93"
+      android:strokeAlpha="0.5"
+      android:strokeWidth="1.3"
       android:fillColor="#00000000"
       android:strokeColor="#1a1a1a"
       android:fillAlpha="0.5"/>
   <path
-      android:pathData="M0.366,15.58L99.379,15.58"
-      android:strokeAlpha="0.9"
-      android:strokeWidth="1"
+      android:pathData="M0.52,15.73L99.53,15.73"
+      android:strokeAlpha="0.5"
+      android:strokeWidth="1.3"
       android:fillColor="#00000000"
       android:strokeColor="#1a1a1a"
       android:fillAlpha="0.5"/>
+  <path
+      android:pathData="M4.62,0.65L95.41,0.65A3.97,3.97 0,0 1,99.38 4.62L99.38,59.41A3.97,3.97 0,0 1,95.41 63.38L4.62,63.38A3.97,3.97 0,0 1,0.65 59.41L0.65,4.62A3.97,3.97 0,0 1,4.62 0.65z"
+      android:strokeAlpha="0.8"
+      android:strokeWidth="0.25"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:fillAlpha="0.8"/>
+  <path
+      android:pathData="M0.52,5.93L99.53,5.93"
+      android:strokeAlpha="0.8"
+      android:strokeWidth="0.25"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:fillAlpha="0.8"/>
+  <path
+      android:pathData="M0.52,15.73L99.53,15.73"
+      android:strokeAlpha="0.8"
+      android:strokeWidth="0.25"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:fillAlpha="0.8"/>
 </vector>
